@@ -7,6 +7,8 @@ sensord (0.6.33) unstable; urgency=low
   * Separated Position.Stable calculation from Screen.* calculations
   * Modified Position.Stable logic to subsample rate to 1hz and utilize
     timer for cases when dataflow stops.
+  * Context Bins are connected / disconnected with start/stop to avoid
+    useless propagation.
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 17 Dec 2010 12:39:45 +0200
 
